<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/navigation_drawer_group_material_design">
        <menu>
            <group
                android:id="@+id/group_material_design"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_introduction"
                    android:title="@string/navigation_drawer_item_introduction"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/navigation_drawer_group_what_is_material">
        <menu>
            <group
                android:id="@+id/group_what_is_material"
                android:checkableBehavior="single"
                android:visible="false">
                <item
                    android:id="@+id/nav_environment"
                    android:title="@string/navigation_drawer_item_environment"/>
                <item
                    android:id="@+id/nav_material_properties"
                    android:title="@string/navigation_drawer_item_material_properties"/>
                <item
                    android:id="@+id/nav_elevation_and_shadows"
                    android:title="@string/navigation_drawer_item_elevation_and_shadows"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/navigation_drawer_group_animation">
        <menu>
            <group
                android:id="@+id/group_animation"
                android:checkableBehavior="single"
                android:visible="false">
                <item
                    android:id="@+id/nav_authentic_motion"
                    android:title="@string/navigation_drawer_item_authentic_motion"/>
                <item
                    android:id="@+id/nav_responsive_interaction"
                    android:title="@string/navigation_drawer_item_responsive_interaction"/>
                <item
                    android:id="@+id/nav_meaningful_transitions"
                    android:title="@string/navigation_drawer_item_meaningful_transitions"/>
                <item
                    android:id="@+id/nav_delightful_details"
                    android:title="@string/navigation_drawer_item_delightful_details"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/navigation_drawer_group_style">
        <menu>
            <group
                android:id="@+id/group_style"
                android:checkableBehavior="single"
                android:visible="false">
                <item
                    android:id="@+id/nav_color"
                    android:title="@string/navigation_drawer_item_color"/>
                <item
                    android:id="@+id/nav_icons"
                    android:title="@string/navigation_drawer_item_icons"/>
                <item
                    android:id="@+id/nav_imagery"
                    android:title="@string/navigation_drawer_item_imagery"/>
                <item
                    android:id="@+id/nav_typography"
                    android:title="@string/navigation_drawer_item_typography"/>
                <item
                    android:id="@+id/nav_writing"
                    android:title="@string/navigation_drawer_item_writing"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/navigation_drawer_group_layout">
        <menu>
            <group
                android:id="@+id/group_layout"
                android:checkableBehavior="single"
                android:visible="false">
                <item
                    android:id="@+id/nav_principles"
                    android:title="@string/navigation_drawer_item_principles"/>
                <item
                    android:id="@+id/nav_units_and_measurements"
                    android:title="@string/navigation_drawer_item_units_and_measurements"/>
                <item
                    android:id="@+id/nav_metrics_and_keylines"
                    android:title="@string/navigation_drawer_item_metrics_and_keylines"/>
                <item
                    android:id="@+id/nav_structure"
                    android:title="@string/navigation_drawer_item_structure"/>
                <item
                    android:id="@+id/nav_adaptive_ui"
                    android:title="@string/navigation_drawer_item_adaptive_ui"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/navigation_drawer_group_components">
        <menu>
            <group
                android:id="@+id/group_components"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_bottom_sheets"
                    android:title="@string/navigation_drawer_item_bottom_sheets"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_buttons"
                    android:title="@string/navigation_drawer_item_buttons"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_buttons_floating_action_button"
                    android:title="@string/navigation_drawer_item_buttons_floating_action_button"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_cards"
                    android:title="@string/navigation_drawer_item_cards"/>
                <item
                    android:id="@+id/nav_chips"
                    android:title="@string/navigation_drawer_item_chips"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_data_tables"
                    android:title="@string/navigation_drawer_item_data_tables"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_dialogs"
                    android:title="@string/navigation_drawer_item_dialogs"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_dividers"
                    android:title="@string/navigation_drawer_item_dividers"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_grid_lists"
                    android:title="@string/navigation_drawer_item_grid_lists"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_lists"
                    android:title="@string/navigation_drawer_item_lists"/>
                <item
                    android:id="@+id/nav_lists_controls"
                    android:title="@string/navigation_drawer_item_lists_controls"/>
                <item
                    android:id="@+id/nav_menus"
                    android:title="@string/navigation_drawer_item_menus"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_pickers"
                    android:title="@string/navigation_drawer_item_pickers"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_progress_and_activity"
                    android:title="@string/navigation_drawer_item_progress_and_activity"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_selection_controls"
                    android:title="@string/navigation_drawer_item_selection_controls"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_sliders"
                    android:title="@string/navigation_drawer_item_sliders"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_snackbars_and_toasts"
                    android:title="@string/navigation_drawer_item_snackbars_and_toasts"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_subheaders"
                    android:title="@string/navigation_drawer_item_subheaders"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_steppers"
                    android:title="@string/navigation_drawer_item_steppers"/>
                <item
                    android:id="@+id/nav_tabs"
                    android:title="@string/navigation_drawer_item_tabs"/>
                <item
                    android:id="@+id/nav_text_fields"
                    android:title="@string/navigation_drawer_item_text_fields"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_toolbars"
                    android:title="@string/navigation_drawer_item_toolbars"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_tooltips"
                    android:title="@string/navigation_drawer_item_tooltips"
                    android:visible="false"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/navigation_drawer_group_patterns">
        <menu>
            <group
                android:id="@+id/group_patterns"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_app_structure"
                    android:title="@string/navigation_drawer_item_app_structure"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_data_formats"
                    android:title="@string/navigation_drawer_item_data_formats"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_empty_states"
                    android:title="@string/navigation_drawer_item_empty_states"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_errors"
                    android:title="@string/navigation_drawer_item_errors"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_gestures"
                    android:title="@string/navigation_drawer_item_gestures"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_fingerprint"
                    android:title="@string/navigation_drawer_item_fingerprint"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_launch_screens"
                    android:title="@string/navigation_drawer_item_launch_screens"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_loading_images"
                    android:title="@string/navigation_drawer_item_loading_images"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_navigation"
                    android:title="@string/navigation_drawer_item_navigation"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_navigation_drawer"
                    android:title="@string/navigation_drawer_item_navigation_drawer"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_navigational_transitions"
                    android:title="@string/navigation_drawer_item_navigational_transitions"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_notifications"
                    android:title="@string/navigation_drawer_item_notifications"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_scrolling_techniques"
                    android:title="@string/navigation_drawer_item_scrolling_techniques"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_search"
                    android:title="@string/navigation_drawer_item_search"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_selection"
                    android:title="@string/navigation_drawer_item_selection"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_settings"
                    android:title="@string/navigation_drawer_item_settings"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_swipe_to_refresh"
                    android:title="@string/navigation_drawer_item_swipe_to_refresh"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/navigation_drawer_group_usability">
        <menu>
            <group
                android:id="@+id/group_usability"
                android:checkableBehavior="single"
                android:visible="false">
                <item
                    android:id="@+id/nav_accessibility"
                    android:title="@string/navigation_drawer_item_accessibility"/>
                <item
                    android:id="@+id/nav_bidirectionality"
                    android:title="@string/navigation_drawer_item_bidirectionality"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/navigation_drawer_group_resources">
        <menu>
            <group
                android:id="@+id/group_resources"
                android:checkableBehavior="single"
                android:visible="false">
                <item
                    android:id="@+id/nav_color_palettes"
                    android:title="@string/navigation_drawer_item_color_palettes"/>
                <item
                    android:id="@+id/nav_devices"
                    android:title="@string/navigation_drawer_item_devices"/>
                <item
                    android:id="@+id/nav_layout_templates"
                    android:title="@string/navigation_drawer_item_layout_templates"/>
                <item
                    android:id="@+id/nav_roboto_and_noto_fonts"
                    android:title="@string/navigation_drawer_item_roboto_and_noto_fonts"/>
                <item
                    android:id="@+id/nav_sticker_sheets_and_icons"
                    android:title="@string/navigation_drawer_item_sticker_sheets_and_icons"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/navigation_drawer_group_whats_new">
        <menu>
            <group
                android:id="@+id/group_whats_new"
                android:checkableBehavior="single"
                android:visible="false">
                <item
                    android:id="@+id/nav_whats_new"
                    android:title="@string/navigation_drawer_item_whats_new"/>
            </group>
        </menu>
    </item>
    <group
        android:id="@+id/group_options"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_app_prefs"
            android:enabled="false"
            android:title="@string/title_settings"/>
        <item
            android:id="@+id/nav_about"
            android:enabled="false"
            android:title="@string/title_about"/>
    </group>
</menu>